fix autocomplete disturbing input on mobile

--- a/gadget_frube.css
+++ b/gadget_frube.css
@@ -294,6 +294,7 @@
 .frube-playlist-switch-icon {
   display: inline-block;
   margin-right: 24px;
+  vertical-align: middle;
 }
 @media (max-width: 1023px) {
   .frube-playlist-switch-icon {
@@ -956,3 +957,4 @@ dialog.fixed {
   border-color: #fff;
   border-color: rgba(255, 255, 255, 0.7);
 }
+
